--- a/SuperMarioBros.ipynb
+++ b/SuperMarioBros.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,6 +295,36 @@
     "        dones = self.dones[batch_indices]\n",
     "\n",
     "        # Returning the random sampled experiences\n",
+    "        return np.array(states), np.array(actions), np.array(rewards), np.array(states_), np.array(dones)\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return self.mem_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replay Buffer class for storing and retrieving sampled experiences\n",
+    "class ReplayBuffer:\n",
+    "    def __init__(self, env, mem_size=MEM_SIZE):\n",
+    "        # Initialising memory count and creating arrays to store experiences\n",
+    "        self.memory = deque(maxlen=mem_size)\n",
+    "        self.mem_count = 0\n",
+    "\n",
+    "    def add(self, state, action, reward, state_, done):\n",
+    "        # Adding experience to memory\n",
+    "        self.memory.append((state, action, reward, state_, done))\n",
+    "        self.mem_count += 1\n",
+    "\n",
+    "    def sample(self):\n",
+    "        # Randomly sample a batch of experiences\n",
+    "        batch_size = min(BATCH_SIZE, self.mem_count)\n",
+    "        batch = random.sample(self.memory, batch_size)\n",
+    "\n",
+    "        states, actions, rewards, states_, dones = zip(*batch)\n",
     "        return np.array(states), np.array(actions), np.array(rewards), np.array(states_), np.array(dones)\n",
     "    \n",
     "    def __len__(self):\n",
@@ -433,9 +463,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using CUDA device: NVIDIA RTX A2000 Laptop GPU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/blakemuchmorewsl/git/TheMarioBros.github.io/.venv/lib/python3.8/site-packages/gym/envs/registration.py:555: UserWarning: \u001b[33mWARN: The environment SuperMarioBros-1-1-v0 is out of date. You should consider upgrading to version `v3`.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/blakemuchmorewsl/git/TheMarioBros.github.io/.venv/lib/python3.8/site-packages/gym/envs/registration.py:627: UserWarning: \u001b[33mWARN: The environment creator metadata doesn't include `render_modes`, contains: ['render.modes', 'video.frames_per_second']\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/blakemuchmorewsl/git/TheMarioBros.github.io/.venv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:233: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(terminated, (bool, np.bool8)):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode:  0\n",
+      "waiting for buffer to fill...\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import gym_super_mario_bros\n",
     "from gym_super_mario_bros.actions import SIMPLE_MOVEMENT\n",
